# animanga-recommender

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_data_spine_pgvector.py  0002_item_traits_upsert_index.py  0003_work_graph.py
src/mal_recommender/: __init__.py  anilist.py  api.py  cli.py  config.py  db.py  ingest.py  mal.py  models.py  recommender.py  traits.py  vectors.py  works.py
tests/: test_data_spine.py  test_ingest.py  test_recommender.py  test_traits.py  test_works.py
