[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mal-recommender"
version = "0.1.0"
description = "MyAnimeList anime and manga recommender model lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.26",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
  "SQLAlchemy>=2.0",
  "torch>=2.3",
  "typer>=0.12",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
]
llm = [
  "openai>=1.30",
]

[project.scripts]
mal-rec = "mal_recommender.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
